@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/notebook/page[@id='managers']" position="after">
+    <xpath expr="/form/notebook/page[@id='managers']" position="before">
         <page string="Benefits" id="benefits">
             <field name="benefits"/>
         </page>
