@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/notebook/page[@id='admin']/group[@id='left']" position="inside">
+    <xpath expr="//group[@id='data']" position="inside">
         <label name="dunning_procedure"/>
         <field name="dunning_procedure"/>
     </xpath>
