@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/notebook/page[@id='admin']" position="before">
+    <xpath expr="/form/notebook/page[@id='managers']/notebook" position="inside">
         <page name="endorsement_definitions">
             <field name="endorsement_definitions"/>
         </page>
