@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree>
-    <field name="code"/>
+    <field name="code" tree_invisible="1"/>
     <field name="name"/>
     <field name="kind"/>
     <field name="tags_name"/>
