@@ -2,9 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/notebook/page[@id='option']" position="before">
-        <page string="Items" id="option">
-            <field name="item_descriptors"/>
-        </page>
+    <xpath expr="/form/notebook/page[@id='option']/field[@name='packages']" position="after">
+        <field name="item_descriptors" colspan="2"/>
     </xpath>
 </data>
